--- a/src/main/resources/templates/fragments/contacto/contactoform.html
+++ b/src/main/resources/templates/fragments/contacto/contactoform.html
@@ -122,7 +122,7 @@
                         <div class="popup "><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup4')" onmouseout ="javascript:ocultarAyuda('poppup4')">a</a></b>
 
-                            <span class="popuptext" id="poppup4">Seleccione el genero del Contacto del Empleado desplegando la lista.!</span>
+                            <span class="popuptext" id="poppup4">Seleccione el sexo del Contacto del Empleado desplegando la lista.!</span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -133,7 +133,7 @@
                         <div class="popup "><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup11')" onmouseout ="javascript:ocultarAyuda('poppup11')">a</a></b>
 
-                            <span class="popuptext" id="poppup11">Ingrese el telefono fijo del Contacto del Empleado solo se admitiran 9 caracteres numericos.!</span>
+                            <span class="popuptext" id="poppup11">Ingrese el telefono fijo del Contacto del Empleado solo se admitiran 9 digitos.!</span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -144,7 +144,7 @@
                         <div class="popup "><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup12')" onmouseout ="javascript:ocultarAyuda('poppup12')">a</a></b>
 
-                            <span class="popuptext" id="poppup12">Ingrese el telefono móvil del Contacto del Empleado solo se admitiran 9 caracteres numericos.!</span>
+                            <span class="popuptext" id="poppup12">Ingrese el telefono móvil del Contacto del Empleado solo se admitiran 9 digitos.!</span>
                         </div>
                     </div>
                     <div class="form-group">
