--- a/src/main/resources/templates/fragments/dependiente/dependienteform.html
+++ b/src/main/resources/templates/fragments/dependiente/dependienteform.html
@@ -105,7 +105,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup4')" onmouseout ="javascript:ocultarAyuda('poppup4')">a</a></b>
                         
-                        <span class="popuptext" id="poppup4">Seleccione o digite la Fecha de Nacimiento del Dependiente del Empleado el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup4">ingrese la Fecha de Nacimiento del Dependiente del Empleado el formato debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                   <div class="form-group">
@@ -141,7 +141,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup4')" onmouseout ="javascript:ocultarAyuda('poppup4')">a</a></b>
                         
-                        <span class="popuptext" id="poppup4">Seleccione el genero del dependiente del empleado desplegando la lista.!</span>
+                        <span class="popuptext" id="poppup4">Seleccione el sexo del dependiente del empleado desplegando la lista.!</span>
                     </div>
             </div>
                 </div>
