--- a/src/main/resources/templates/fragments/formacionacademica/formacionacademicaform.html
+++ b/src/main/resources/templates/fragments/formacionacademica/formacionacademicaform.html
@@ -92,7 +92,7 @@
                      <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup12')" onmouseout ="javascript:ocultarAyuda('poppup12')">a</a></b>
                         
-                        <span class="popuptext" id="poppup12">Ingrese los años aprobados del Empleado solo se admitiran  caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup12">Ingrese los años aprobados del Empleado solo se admitiran  digitos.!</span>
                     </div>
                 </div>
 <!--                 <div class="form-group">
@@ -118,7 +118,7 @@
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup19')" onmouseout ="javascript:ocultarAyuda('poppup19')">a</a></b>
                         
-                        <span class="popuptext" id="poppup19">Seleccione o digite la Fecha inicial de los estudios realizados por el Empleado el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup19">ingrese la Fecha inicial de los estudios realizados por el Empleado el formtado debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                 <div class="form-group">
@@ -129,11 +129,11 @@
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup20')" onmouseout ="javascript:ocultarAyuda('poppup20')">a</a></b>
                         
-                        <span class="popuptext" id="poppup20">Seleccione o digite la Fecha inicial de los estudios realizados por el Empleado el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup20">ingrese la Fecha inicial de los estudios realizados por el Empleado el formtado debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                   <div class="form-group">
-                <label class="col-sm-3 control-label">Terminó(*):</label>
+                <label class="col-sm-3 control-label">Completo sus estudios(*):</label>
                 <div class="col-sm-4">
                     <select class="form-control" name="termino" th:field="*{termino}">
                             <!--th:field="*{termino}">-->
@@ -156,7 +156,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup16')" onmouseout ="javascript:ocultarAyuda('poppup16')">a</a></b>
                         
-                        <span class="popuptext" id="poppup16">Ingrese el titulo obtenido por el Empleado solo se admitiran 9 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup16">Ingrese el titulo obtenido por el Empleado solo se admitiran 9 digitos.!</span>
                     </div>
                 </div>
                 <div class="form-group">
