--- a/src/main/resources/templates/fragments/contacto/contactoform.html
+++ b/src/main/resources/templates/fragments/contacto/contactoform.html
@@ -133,7 +133,7 @@
                         <div class="popup "><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup11')" onmouseout ="javascript:ocultarAyuda('poppup11')">a</a></b>
 
-                            <span class="popuptext" id="poppup11">Ingrese el telefono fijo del Contacto del Empleado solo se admitiran 9 digitos.!</span>
+                            <span class="popuptext" id="poppup11">Ingrese el telefono fijo del Contacto del empleado solo se admitiran digitos del 0 al 9!</span>
                         </div>
                     </div>
                     <div class="form-group">
