--- a/src/main/resources/templates/fragments/contrato/contratoform.html
+++ b/src/main/resources/templates/fragments/contrato/contratoform.html
@@ -83,7 +83,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup3')" onmouseout ="javascript:ocultarAyuda('poppup3')">a</a></b>
                         
-                        <span class="popuptext" id="poppup3">Ingrese el salario actual del Empleado solo se admitiran dos decimales caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup3">Ingrese el salario actual del empleado. Solo se admiten cantidades numericas con dos decimales</span>
                     </div>
                 </div>
                  <div class="form-group">
@@ -94,7 +94,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup7')" onmouseout ="javascript:ocultarAyuda('poppup7')">a</a></b>
                         
-                        <span class="popuptext" id="poppup7">Ingrese el la unidad presupuestaria solo se admitiran dos decimales caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup7">Ingrese el la unidad presupuestaria. Se adminte hasta 100 caracteres!</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -116,7 +116,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup25')" onmouseout ="javascript:ocultarAyuda('poppup25')">a</a></b>
                         
-                        <span class="popuptext" id="poppup25">Ingrese la linea de trabajo del Empleado solo se admitiran 50 caracteres .!</span>
+                        <span class="popuptext" id="poppup25">Ingrese la linea de trabajo del empleado solo se admitiran 50 caracteres .!</span>
                     </div>
                 </div>
                  <div class="form-group">
@@ -127,7 +127,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup2')" onmouseout ="javascript:ocultarAyuda('poppup2')">a</a></b>
                         
-                        <span class="popuptext" id="poppup2">Ingrese el numero de partida del Empleado solo se admitiran 9 caracteres.!</span>
+                        <span class="popuptext" id="poppup2">Ingrese el numero de partida del empleado solo se admitiran 9 caracteres.!</span>
                     </div>
                 </div>
                  <div class="form-group">
@@ -138,7 +138,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup22')" onmouseout ="javascript:ocultarAyuda('poppup22')">a</a></b>
                         
-                        <span class="popuptext" id="poppup22">Ingrese el numero de subpartida del Empleado solo se admitiran 9 caracteres.!</span>
+                        <span class="popuptext" id="poppup22">Ingrese el numero de subpartida del empleado solo se admitiran 9 caracteres.!</span>
                     </div>
                 </div>
                 
@@ -163,7 +163,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup21')" onmouseout ="javascript:ocultarAyuda('poppup21')">a</a></b>
                         
-                        <span class="popuptext" id="poppup21">Seleccione o digite la Fecha de inicio del contrato del Empleado el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup21">Seleccione o digite la fecha de inicio del contrato del empleado el formtado debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                 <div class="form-group">
@@ -174,7 +174,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup20')" onmouseout ="javascript:ocultarAyuda('poppup20')">a</a></b>
                         
-                        <span class="popuptext" id="poppup20">Seleccione o digite la Fecha de finalizacion del contrato del Empleado el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup20">Seleccione o digite la fecha de finalizacion del contrato del empleado el formtado debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                 
