--- a/src/main/resources/templates/fragments/dependiente/dependienteform.html
+++ b/src/main/resources/templates/fragments/dependiente/dependienteform.html
@@ -105,7 +105,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup4')" onmouseout ="javascript:ocultarAyuda('poppup4')">a</a></b>
                         
-                        <span class="popuptext" id="poppup4">ingrese la Fecha de Nacimiento del Dependiente del Empleado el formato debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup4">ingrese la fecha de nacimiento del dependiente del empleado</span>
                     </div>
             </div>
                   <div class="form-group">
@@ -113,11 +113,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="col-sm-5">
                     <select class="form-control" name="parentesco" th:field="*{parentesco}" > 
                             <!--th:field="*{parentesco}" >-->
-                             <option value="0">--seleccione el parentesco del dependiente--</option>
+                             <option value="0">--seleccione el parentesco del dependiente desplegando la lista--</option>
                         <option value="Hijo">Hijo</option>
                         <option value="Hermano">Hermano</option>
                          <option value="Hijo">Papa</option>
-                         <option value="Hijo">sobrino</option>
+                         <option value="Hijo">Sobrino</option>
                         <option value="Tio">Tio</option>
                          
                     </select>
@@ -125,7 +125,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup3')" onmouseout ="javascript:ocultarAyuda('poppup3')">a</a></b>
                         
-                        <span class="popuptext" id="poppup3">Ingrese el parentesco del dependiente del dmpleado solo se admitiran 100 caracteres.!</span>
+                        <span class="popuptext" id="poppup3">Ingrese el parentesco del dependiente del empleado solo se admitiran 100 caracteres.!</span>
                     </div>
             </div>	
                   <div class="form-group">
