--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -126,7 +126,7 @@
                  <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup4')" onmouseout ="javascript:ocultarAyuda('poppup4')">a</a></b>
                         
-                        <span class="popuptext" id="poppup4">Ingrese la Fecha de Nacimiento del Empleado el formato debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup4">Ingrese la fecha de nacimiento del empleado el formato debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                  <div class="form-group">
@@ -206,7 +206,7 @@
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup9')" onmouseout ="javascript:ocultarAyuda('poppup9')">a</a></b>
                         
-                        <span class="popuptext" id="poppup9">Seleccione el sexo del Empleado desplegando la lista.!</span>
+                        <span class="popuptext" id="poppup9">Seleccione el sexo del empleado desplegando la lista.!</span>
                     </div>
             </div>
                  <div class="form-group">
@@ -228,7 +228,7 @@
                      <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup11')" onmouseout ="javascript:ocultarAyuda('poppup11')">a</a></b>
                         
-                        <span class="popuptext" id="poppup11">Ingrese el telefono fijo del Empleado solo se admitiran 9 digitos.!</span>
+                        <span class="popuptext" id="poppup11">Ingrese el telefono fijo del empleado solo se admitiran digitos del 0 al 9</span>
                     </div>
                 </div>
                  <div class="form-group">
@@ -239,7 +239,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup12')" onmouseout ="javascript:ocultarAyuda('poppup12')">a</a></b>
                         
-                        <span class="popuptext" id="poppup12">Ingrese el telefono movil del Empleado solo se admitiran 9 digitos.!</span>
+                        <span class="popuptext" id="poppup12">Ingrese el telefono movil del Empleado solo se admitiran digitos del 0 al 9.</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -308,7 +308,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup17')" onmouseout ="javascript:ocultarAyuda('poppup17')">a</a></b>
                         
-                        <span class="popuptext" id="poppup17">Ingrese el NIT del empleado solo se admitiran 14 digitos.!</span>
+                        <span class="popuptext" id="poppup17">Ingrese el NIT del empleado solo se admitiran digitos del 0 al 9!</span>
                     </div>
                 </div>
                 
@@ -320,7 +320,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup18')" onmouseout ="javascript:ocultarAyuda('poppup18')">a</a></b>
                         
-                        <span class="popuptext" id="poppup18">Ingrese el ISSS del empleado solo se admitiran 9 digitos.!</span>
+                        <span class="popuptext" id="poppup18">Ingrese el ISSS del empleado solo se admitiran digitos del 0 al 9!</span>
                     </div>
                 </div>
                    <div class="form-group">
@@ -401,7 +401,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup24')" onmouseout ="javascript:ocultarAyuda('poppup24')">a</a></b>
                         
-                        <span class="popuptext" id="poppup24">Ingrese el NUP del Empleado solo se admitiran 12 digitos.!</span>
+                        <span class="popuptext" id="poppup24">Ingrese el NUP del Empleado solo se admitiran digitos del 0 al 9!</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -428,7 +428,7 @@
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup26')" onmouseout ="javascript:ocultarAyuda('poppup26')">a</a></b>
                         
-                        <span class="popuptext" id="poppup26">Seleccione el tipo de cuenta bancaria del Empleado desplegando la lista.!</span>
+                        <span class="popuptext" id="poppup26">Seleccione el tipo de cuenta bancaria del empleado desplegando la lista.!</span>
                     </div>
              
             </div>
@@ -440,7 +440,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup27')" onmouseout ="javascript:ocultarAyuda('poppup27')">a</a></b>
                         
-                        <span class="popuptext" id="poppup27">Ingrese el numero de cuenta bancaria del Empleado solo se admitiran 30 digitos.!</span>
+                        <span class="popuptext" id="poppup27">Ingrese el numero de cuenta bancaria del empleado solo se admitiran digitos del 0 al 9!</span>
                     </div>
                 </div>
  <div class="form-group">
@@ -448,7 +448,7 @@
                 <div class="col-sm-6">
                     <select class="form-control" name="estadoempleado" required="true" th:field="*{estadoempleado}">
                             <!--th:field="*{tipocuenta}">-->
-                             <option value="7">--seleccione el estado del Empleado--</option>
+                             <option value="7">--seleccione el estado del empleado--</option>
                         <option value="1">Activo</option>
                         <option value="3">Pensionado</option>
                         <option value="2">Indemnizado</option>
@@ -459,7 +459,7 @@
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup263')" onmouseout ="javascript:ocultarAyuda('poppup263')">a</a></b>
                         
-                        <span class="popuptext" id="poppup263">Seleccione el estado del Empleado desplegando la lista.!</span>
+                        <span class="popuptext" id="poppup263">Seleccione el estado del empleado desplegando la lista.!</span>
                     </div>
              
             </div>
